--- a/style.css
+++ b/style.css
@@ -236,10 +236,80 @@ p.second{
 text-align: center;
 margin-left: -95px;
 }
-/*footer
+/*footer*/
+
+.footer{
+    background-color: #000; 
+    min-height: 470px;
+    margin-top: 90px;
+    }
+    .line2{
+        position:absolute;
+        width: 1000px;
+        margin-top: 70px;
+        border: 1px solid white;
+    }
+    .idea{
+        color:white;
+        font-weight: 200;
+        font-size: 72px;
+        line-height: 98px;
+        padding-top: 70px;
+    }
+    
+    .aside{
+        display:flex;
+    }
+    .talk{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-weight: 200;
+        font-size: 25px;
+        line-height: 51px;
+        text-decoration-line: underline;
+        color: #FFFFFF;
+    }
+.media{
+    display: grid;
+    grid-template-columns:repeat(4, 2fr);
+    grid-template-rows: minmax(50px, auto);
+    justify-content: space-around;
+    grid-gap: 5px;
+    color: #fff;
+   
+}
+ .media,.handles{
+    margin-left: 500px;
+}
+
+.line1{
+    position:absolute;
+    width: 1000px;
+    margin-top: 100px;
+    border: 1px solid white;
+}
+
+
+.lastF > .chats{
+   
+    background:#ffff;
+    border-radius: 40% ;
+     border: 2px solid hsl(0, 0%, 100%);
+    }
+ 
+.msg{
+    margin-left: 950px;
+margin-top: 60px;
+}
+
+.footer.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+ 
 
 /*footer*/
-.footer{
+/* .footer{
     background-color: #000;
     width:1347px;
     height: 470px;}
@@ -316,7 +386,7 @@ margin-left: -95px;
                 background:#ffff;
                 border-radius: 40% ;
                  border: 2px solid hsl(0, 0%, 100%);
-                }
+                } */
 
   @media(max-width:768px),
   (max-width: 665px){
